--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <body>
 <div th:replace="~{fragments/alert}"></div>
 <div class="container">
-    <form class="login-form" th:action="@{/login}" method="post">
+    <form class="login-form" th:action="@{/login}" method="POST">
         <h2>SpringCloud</h2>
         <div class="input-group">
             <input type="text" name="username" required placeholder=" " />
