Made first webhook settigns

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -126,6 +126,16 @@
         <div class="webhook-url-group">
             <label for="webhookUrl" class="no-select">Webhook URL:</label>
             <input type="text" id="webhookUrl" name="url" placeholder="https://example.com/webhook" required>
+            <div class="extended-settings">
+                <div class="webhook-url-group">
+                    <label for="webhookName" class="no-select">Webhook Name:</label>
+                    <input type="text" id="webhookName" name="webhookName" placeholder="SpringBoot" required>
+                </div>
+                <div class="webhook-url-group">
+                    <label for="webhookPicture" class="no-select">Webhook URL:</label>
+                    <input type="text" id="webhookPicture" name="webhookPicture" placeholder="https://example.com/webhook" required>
+                </div>
+            </div>
         </div>
 
         <div class="webhook-events">
