Added Imgur api for webhook pics

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -132,8 +132,8 @@
                     <input type="text" id="webhookName" name="webhookName" placeholder="SpringBoot" required>
                 </div>
                 <div class="webhook-url-group">
-                    <label for="webhookPicture" class="no-select">Webhook URL:</label>
-                    <input type="text" id="webhookPicture" name="webhookPicture" placeholder="https://example.com/webhook" required>
+                    <label for="webhookPicture" class="no-select">Webhook Picture:</label>
+                    <input type="file" id="webhookPicture" name="webhookPicture" accept="image/*" required>
                 </div>
             </div>
         </div>
