Added Site Settings

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -9,6 +9,7 @@
     <script th:src="@{/js/navbar.js}"></script>
 </head>
 <body>
+<div th:replace="~{fragments/alert}"></div>
 
 <div class="navbar no-select">
     <div class="brand">SpringCloud</div>
