--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,6 +13,13 @@
 
 <div class="navbar no-select">
     <div class="brand">SpringCloud</div>
+
+    <div class="burger" id="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
     <div class="username-box" id="usernameBox">
         <svg class="user-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#b259ff" width="24" height="24" aria-hidden="true">
             <path d="M12 12c2.7 0 4.9-2.2 4.9-4.9S14.7 2.2 12 2.2 7.1 4.4 7.1 7.1 9.3 12 12 12zm0 2.2c-3.2 0-9.5 1.6-9.5 4.9v2.7h19v-2.7c0-3.3-6.3-4.9-9.5-4.9z"/>
@@ -25,6 +32,13 @@
             <a th:href="@{/settings}">Settings</a>
             <a th:href="@{/logout}">Logout</a>
         </div>
+    </div>
+    <div class="mobile-menu" id="mobileMenu">
+        <a th:if="${role != null and #strings.endsWith(role, 'ADMIN')}" th:href="@{/admin}" class="admin-element">Admin</a>
+        <a th:href="@{/dashboard}">Dashboard</a>
+        <a th:href="@{/calendar}">Calendar</a>
+        <a th:href="@{/settings}">Settings</a>
+        <a th:href="@{/logout}">Logout</a>
     </div>
 </div>
 
@@ -59,6 +73,14 @@
         passwordField.type = type;
         confirmPasswordField.type = type;
     }
+</script>
+<script>
+    const burger = document.getElementById('burger');
+    const mobileMenu = document.getElementById('mobileMenu');
+
+    burger.addEventListener('click', () => {
+        mobileMenu.classList.toggle('show');
+    });
 </script>
 </body>
 </html>
